--- a/administrador/templates/mostrar_paciente_administrador.html
+++ b/administrador/templates/mostrar_paciente_administrador.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'styles/mostrar_paciente.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/mostrar_paciente_administrador.css' %}">
 <link rel="stylesheet" href="{% static 'styles/modal.css' %}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
