--- a/ortesisWeb/static/css/tabla.css
+++ b/ortesisWeb/static/css/tabla.css
@@ -37,17 +37,18 @@ tbody tr .centro-tabla {
 }
 
 tbody tr td {
-    padding: 23px;
+    height: 105px;
+    vertical-align: middle;
     text-align: center;
 }
 
 @media screen and (max-width: 1200px){
     .table {
-        font-size: 20px;
+        font-size: 18px;
     }
 
     tbody tr td {
-        padding: 20px;
+        height: 105px;
     }
 }
 
@@ -57,7 +58,7 @@ tbody tr td {
     }
 
     tbody tr td {
-        padding: 15px;
+        height: 95px;
     }
 }
 
@@ -67,6 +68,6 @@ tbody tr td {
     }
 
     tbody tr td {
-        padding: 15px;
+        height: 85px;
     }
 }
