--- a/recepcionista/static/css/listar_pacientes_recepcionista.css
+++ b/recepcionista/static/css/listar_pacientes_recepcionista.css
@@ -181,16 +181,23 @@
     gap: 5px;
 }
 
+input[type="checkbox"] {
+    cursor: pointer;
+    margin: 0 20px;
+}
+
 .final-tabla {
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: row;
+    max-height: 100%;
+    width: auto;
 }
 
 .final-tabla a img{
-    width: 50px;
-    height: 50px;
+    width: auto;
+    max-height: 100%;
     filter: brightness(0) saturate(100%) invert(21%) sepia(15%) saturate(1269%) hue-rotate(192deg) brightness(93%) contrast(88%);
 }
 /* Botones de acciones en la tabla */
@@ -260,25 +267,4 @@
 
 .boton-confirmar:hover {
     background-color: #008F85;
-}
-
-@media screen and (max-width: 1200px){
-    .final-tabla a img {
-        width: 40px;
-        height: 40px;
-    }
-}
-
-@media screen and (max-width: 768px){
-    .final-tabla a img {
-        width: 30px;
-        height: 30px;
-    }
-}
-
-@media screen and (max-width: 600px){
-    .final-tabla a img {
-        width: 25px;
-        height: 25px;
-    }
 }
