--- a/terapeuta/templates/historial_paciente.html
+++ b/terapeuta/templates/historial_paciente.html
@@ -64,7 +64,7 @@
             <p>Próxima Cita: 30/08 <i class="fas fa-calendar-alt"></i></p>
         </div>
         <div class="acciones-paciente">
-            <button class="btn-observaciones">Observaciones</button>
+            <button class="btn-observaciones" onclick="window.location.href='{% url 'observaciones_paciente' paciente.id %}'">Observaciones</button>
             <button class="btn-añadir-rutina"><i class="fas fa-plus"></i> Añadir Rutina</button>
         </div>
     </div>
