--- a/terapeuta/templates/historial_paciente.html
+++ b/terapeuta/templates/historial_paciente.html
@@ -109,64 +109,65 @@
         <!-- Aquí puedes agregar más elementos de rutina si es necesario -->
     </ul>
 </div>
-  <!-- Modal Popup para confirmar la desvinculación -->
-  <div id="desvincularModal" class="modal">
+ <!-- Modal Popup para confirmar la desvinculación -->
+<div id="desvincularModal" class="modal modal-desvincular">
     <div class="modal-content">
-      <h2>¿Desea pasar a estado inactivo a este paciente?</h2>
-      <div class="modal-body">
-        <div class="label-value">
-          <span class="label">Nombre:</span>
-          <span class="value">{{ paciente.first_name }} {{ paciente.last_name }}</span>
-        </div>
-        <div class="label-value">
-          <span class="label">Rut:</span>
-          <span class="value">{{ paciente.rut }}</span>
-        </div>
-        <div class="label-value">
-          <span class="label">Sexo:</span>
-          <span class="value">{{ paciente.sexo }}</span>
-        </div>
-        <div class="label-value">
-          <span class="label">Edad:</span>
-          <span class="value">{{ paciente.edad }}</span>
-        </div>
-        <div class="label-value">
-          <span class="label">Número de Teléfono:</span>
-          <span class="value">{{ paciente.telefono }}</span>
-        </div>
-        <div class="label-value">
-          <span class="label">Correo Electrónico:</span>
-          <span class="value">{{ paciente.email }}</span>
-        </div>
-        <div class="label-value">
-          <span class="label">Patología:</span>
-          <span class="value">{{ paciente.patologia }}</span>
-        </div>
-        <div class="label-value">
-          <span class="label">Terapeuta a cargo:</span>
-          <span class="value">{{ terapeuta.nombre }}</span>
+        <span class="close" id="cerrarDesvincular">&times;</span>
+        <h2>¿Desea pasar a estado inactivo a este paciente?</h2>
+        <div class="modal-body">
+            <div class="label-value">
+                <span class="label">Nombre:</span>
+                <span class="value">{{ paciente.first_name }} {{ paciente.last_name }}</span>
+            </div>
+            <div class="label-value">
+                <span class="label">Rut:</span>
+                <span class="value">{{ paciente.rut }}</span>
+            </div>
+            <div class="label-value">
+                <span class="label">Sexo:</span>
+                <span class="value">{{ paciente.sexo }}</span>
+            </div>
+            <div class="label-value">
+                <span class="label">Edad:</span>
+                <span class="value">{{ paciente.edad }}</span>
+            </div>
+            <div class="label-value">
+                <span class="label">Número de Teléfono:</span>
+                <span class="value">{{ paciente.telefono }}</span>
+            </div>
+            <div class="label-value">
+                <span class="label">Correo Electrónico:</span>
+                <span class="value">{{ paciente.email }}</span>
+            </div>
+            <div class="label-value">
+                <span class="label">Patología:</span>
+                <span class="value">{{ paciente.patologia }}</span>
+            </div>
+            <div class="label-value">
+                <span class="label">Terapeuta a cargo:</span>
+                <span class="value">{{ terapeuta.nombre }}</span>
+            </div>
+
+            <!-- Campo para ingresar el motivo de la inactivación -->
+            <div class="motivo-inactivacion">
+                <label for="motivo">Motivo de inactivación:</label>
+                <textarea id="motivo" rows="4" placeholder="Ingrese el motivo de inactivación del paciente [máx 1000 caracteres]"></textarea>
+            </div>
+            <div class="mensaje-terapeuta">
+                <p>El paciente podrá ser visualizado en la sección de pacientes inactivos</p>
+            </div>
         </div>
 
-        <!-- Campo para ingresar el motivo de la inactivación -->
-        <div class="motivo-inactivacion">
-          <label for="motivo">Motivo de inactivación:</label>
-          <textarea id="motivo" rows="4" placeholder="Ingrese el motivo de inactivación del paciente [máx 1000 caracteres]"></textarea>
+        <!-- Botones de confirmación y cancelación -->
+        <div class="modal-footer">
+            <button class="cancel-btn" id="cancelarDesvinculacion">Cancelar</button>
+            <button class="confirm-btn" id="confirmarDesvinculacion">Confirmar</button>
         </div>
-        <div class="mensaje-terapeuta">
-          <p>El paciente podrá ser visualizado en la sección de pacientes inactivos</p>
-        </div>
-      </div>
-
-      <!-- Botones de confirmación y cancelación -->
-      <div class="modal-footer">
-        <button class="cancel-btn" id="cancelarDesvinculacion">Cancelar</button>
-        <button class="confirm-btn" id="confirmarDesvinculacion">Confirmar</button>
-      </div>
     </div>
-  </div>
+</div>
 
 <!-- Modal Popup para añadir nueva rutina -->
-<div id="nuevaRutinaModal" class="modal">
+<div id="nuevaRutinaModal" class="modal modal-nueva-rutina">
     <div class="modal-content">
         <span class="close" id="cerrarNuevaRutina">&times;</span>
         <h2>Nueva Rutina</h2>
@@ -200,7 +201,7 @@
             <input type="text" id="velocidad" name="velocidad" required>
 
             <div class="modal-footer">
-                <button type="button" class="cancel-btn" id="cancelarNuevaRutina" ">Cancelar</button>
+                <button type="button" class="cancel-btn" id="cancelarNuevaRutina">Cancelar</button>
                 <button type="submit" class="confirm-btn">Confirmar</button>
             </div>
         </form>
