--- a/terapeuta/static/css/historial_paciente.css
+++ b/terapeuta/static/css/historial_paciente.css
@@ -12,6 +12,7 @@
     color: #008CAB;
     transition: color 0.3s ease;
 }
+
 .contenedor-header h1 {
     display: flex;
     margin: 0;
@@ -46,7 +47,6 @@
 .contenedor-principal {
     width: 95%;
     display: flex;
-
     flex-direction: column;
     background-color: #D9D9D9;
     border-top-right-radius: 50px;
@@ -133,21 +133,23 @@
 }
 
 /* Botones */
-.btn-observaciones, .btn-añadir-rutina {
+.btn-observaciones,
+.btn-añadir-rutina {
     margin-top: 10px;
     margin-right: 15px;
     padding: 10px 15px;
     border: none;
     background-color: #ffffff;
     color: #000000;
-    font-size:16px;
+    font-size: 16px;
     cursor: pointer;
     border-radius: 50px;
     width: 164px;
     gap: 10px;
 }
 
-.btn-observaciones:hover, .btn-añadir-rutina:hover {
+.btn-observaciones:hover,
+.btn-añadir-rutina:hover {
     background-color: #008CAB;
     color: #ffffff;
 }
@@ -164,6 +166,7 @@
     margin: 15px 30px;
     gap: 10px;
 }
+
 .btn-modificar-rutina {
     background-color: #008CAB;
     color: white;
@@ -173,13 +176,13 @@
     font-size: 16px;
     cursor: pointer;
 }
+
 /* -------------------CONTENEDOR RUTINAS------------------- */
 .contenedor-rutinas {
     width: 95%;
-    margin: 0 auto;
+    margin: 20px auto;
     display: flex;
     flex-direction: column;
-    gap: 20px;
 }
 
 .rutina-card {
@@ -190,6 +193,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
     list-style: none;
+    margin-bottom: 20px;
 }
 
 .rutina-card:hover {
@@ -310,6 +314,10 @@
     border-radius: 10px;
     width: 50%;
     max-width: 600px;
+    /* Aseguramos que ambos modales tengan el mismo tamaño */
+    min-width: 500px;
+    max-height: 80%;
+    overflow-y: auto;
 }
 
 .modal-content h2 {
@@ -338,7 +346,8 @@
     gap: 10px;
 }
 
-.label, .value {
+.label,
+.value {
     text-align: left;
 }
 
@@ -366,12 +375,14 @@
 }
 
 /* Botones generales para todos los modals */
-.confirm-btn, .cancel-btn {
+.confirm-btn,
+.cancel-btn {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    margin-top: 10px;
 }
 
 .confirm-btn {
@@ -384,7 +395,8 @@
     color: white;
 }
 
-.confirm-btn:hover, .cancel-btn:hover {
+.confirm-btn:hover,
+.cancel-btn:hover {
     opacity: 0.9;
 }
 
@@ -392,12 +404,12 @@
 #nuevaRutinaForm {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 20px;
 }
 
 #nuevaRutinaForm label {
     font-weight: 500;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
 }
 
 #nuevaRutinaForm input[type="date"],
@@ -444,4 +456,35 @@
 .configuracion-ortesis input[type="number"] {
     width: 80px;
     text-align: center;
+}
+
+
+#desvincularModal .modal-content{
+    width: 50%;
+    max-width: 600px;
+    min-width: 500px;
+    max-height: 80%;
+    overflow-y: auto;
+}
+
+
+#desvincularModal .modal-body{
+    width: 80%;
+    overflow-y: auto;
+}
+
+#nuevaRutinaModal .modal-content {
+    display: flex;
+    width: 50%;
+    max-width: 300px;
+    max-height: 90%;
+    overflow-y: auto;
+}
+
+#nuevaRutinaModal form {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin: 0 auto;
+    width: 80%;
 }
