--- a/terapeuta/static/css/grafico_progreso_paciente.css
+++ b/terapeuta/static/css/grafico_progreso_paciente.css
@@ -1,4 +1,90 @@
-.chart{
-    width: 100%;
-    min-height: 400px;
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 0;
+}
+
+.notification-icon{
+    padding: 10px 20px;
+}
+
+.header h1 {
+    font-size: 48px;
+    color: black;
+    font-weight: 400;
+    margin: 1rem 0 0.5rem 1rem;
+}
+
+.main-content {
+    margin: 0 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-content h2 {
+    font-size: 24px;
+    color: black;
+    font-weight: 400;
+}
+
+.contenedor-graficos{
+    display: flex;
+    flex-direction: column;
+}
+
+.chart {
+    width: 1200px; /* Ancho fijo */
+    height: 500px; /* Altura relativa al viewport para que sea responsivo */
+    margin-bottom: 20px; /* Espacio entre los gráficos */
+    border: 1px solid #d9d9d9;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: white;
+    margin-top: 20px;
+}
+
+@media (max-width: 900px) {
+    .chart {
+        width: 650px;
+        height: 300px; /* Menor altura para pantallas medianas */
+    }
+
+    .header h1 {
+        font-size: 36px;
+    }
+
+    .main-content h2 {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .chart {
+        width: 500px; /* Ancho completo para pantallas pequeñas */
+        height: 200px; /* Aún menor altura para pantallas pequeñas */
+    }
+    
+    .header h1 {
+        font-size: 30px;
+    }
+
+    .main-content h2 {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 480px) {
+    .chart {
+        width: 300px; /* Ancho completo para pantallas pequeñas */
+        height: 200px; /* Aún menor altura para pantallas pequeñas */
+    }
+
+    .header h1 {
+        font-size: 24px;
+    }
+
+    .main-content h2 {
+        font-size: 16px;
+    }
 }
