--- a/terapeuta/static/css/perfil.css
+++ b/terapeuta/static/css/perfil.css
@@ -11,11 +11,12 @@
 /* Estilos para la información del perfil */
 .profile-info h1 {
     font-size: 40px;
-    font-weight: 400;
+    font-weight: 500;
     margin-bottom: 30px;
 }
 
 .profile-info p {
+    font-weight: 500;
     font-size: 30px;
 }
 
@@ -29,8 +30,9 @@
 }
 
 .doctor-logo h2 {
+    font-weight: 500;
     margin-top: 100px;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 
 /* Estilos para la información de contacto */
@@ -48,7 +50,6 @@
     background-color: white;
     border-radius: 5px;
     padding: 10px;
-    margin-bottom: 25px;
     width: 400px;
 }
 
@@ -59,7 +60,6 @@
 }
 
 .contact-item p {
-    margin: 0;
     font-size: 18px;
 }
 
@@ -75,15 +75,15 @@
     width: 45%;
     width: 600px;
     background-color: white;
-    border: 2px solid rgba(0, 0, 0, 0.3);
+    border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     padding: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 40px;
 }
 
 .presentation h2 {
     font-size: 24px;
+    font-weight: 500;
     margin-bottom: 15px;
     display: flex;
     justify-content: space-between;
@@ -92,7 +92,6 @@
 
 .presentation-edit-icon {
     margin-left: 10px;
-    cursor: pointer;
     color: #008CAB;
 }
 
@@ -101,8 +100,10 @@
 }
 
 .presentation p {
+    font-weight: 400;
     font-size: 20px;
     line-height: 1.5;
+    width: 90%;
 }
 
 /* Estilos para el logo SVG */
@@ -111,7 +112,109 @@
     width: 100px;
     height: 50px;
     fill: #008CAB;
+}
+
+/* Estilo general del popup */
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-title {
+    font-size: 32px;
+    font-weight: 400;
+    text-align: center;
+    margin-bottom: 25px;
+    color: #000000;
+}
+
+.popup-subtitle {
+    font-size: 24px;
+    font-weight: 400; 
+    color: #000000;
+    margin-bottom: 10px;
+}
+
+/* Contenido del popup */
+.popup-content {
+    background-color: white;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 440px;
+    position: relative;
+}
+
+.close {
+    position: absolute; 
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    color: #000000;
     cursor: pointer;
+}
+
+/* Estilos para la caja de texto de presentación */
+#presentacion {
+    width: 100%; 
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    line-height: 1.5;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    resize: vertical;
+    margin-bottom: 20px;
+}
+
+.contact-item {
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 40px;
+}
+
+.contact-item input {
+    border: none;
+    outline: none;
+    flex: 1;
+}
+
+/* Estilo de los botones */
+.popup-actions {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+.cancel-btn,
+.confirm-btn {
+    padding: 10px 30px;
+    border: none;
+    border-radius: 25px;
+    margin: 0 10px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.cancel-btn {
+    background-color: #FF6161;
+    color: white;
+}
+
+.confirm-btn {
+    background-color: #006A60;
+    color: white;
 }
 
 /* Ajustes responsivos */
