Agrego mensajes de exito y error al ingresar el correo. Valide que el correo no sea uno ya registrado por otro terapeuta y el correo debe cumplir el formato que tienen los correos. Tambien hice algunos cambios en el css del perfil para disminuir la separacion de los datos.

--- a/terapeuta/static/css/perfil.css
+++ b/terapeuta/static/css/perfil.css
@@ -25,7 +25,8 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
+    margin-left: 50px;
     margin-top: 20px;
 }
 
@@ -109,6 +110,7 @@
 /* Estilos para el logo SVG */
 .svg-logo {
     transform: scale(4);
+    margin-left: 250px;
     width: 100px;
     height: 50px;
     fill: #008CAB;
