--- a/terapeuta/templates/perfil.html
+++ b/terapeuta/templates/perfil.html
@@ -42,10 +42,14 @@
 </div>
 
 <!-- Popup de Ediciones -->
+<!-- Popup de Ediciones -->
 <div id="edit-profile-popup" class="popup">
     <div class="popup-content">
         <span class="close" onclick="closePopup('edit-profile-popup')">&times;</span>
         <h1 class="popup-title">Editar datos</h1>
+
+        <!-- Contenedor para mensajes de error -->
+        <div id="error-message" style="color: red;"></div>
 
         <form id="edit-profile-form" method="POST" action="{% url 'editar_perfil' terapeuta.id %}">
             {% csrf_token %}
@@ -62,6 +66,7 @@
                     <i class="fas fa-envelope"></i>
                     <input type="email" name="correo_contacto" placeholder="Correo Electrónico" value="{{ terapeuta.correo_contacto }}">
                 </div>
+            </div>
             <div class="popup-actions">
                 <button type="button" class="cancel-btn" onclick="closePopup('edit-profile-popup')">Cancelar</button>
                 <button type="submit" class="confirm-btn">Confirmar</button>
@@ -71,6 +76,33 @@
 </div>
 
 <script>
+
+document.addEventListener("DOMContentLoaded", function() {
+    {% if messages %}
+        let errorMessageContainer = document.getElementById('error-message');
+        errorMessageContainer.innerHTML = '';  // Limpiar mensajes de error previos
+
+        {% for message in messages %}
+            {% if message.tags == 'success' %}
+                Swal.fire({
+                    title: '¡Éxito al Guardar!',
+                    icon: 'success',
+                    confirmButtonText: 'Aceptar',
+                    confirmButtonColor: '#3085d6',
+                    background: '#f0f0f0',
+                    timer: 2000,
+                });
+                closePopup('edit-profile-popup'); // Cerrar popup si es éxito
+            {% elif message.tags == 'error' %}
+                // Mostrar mensaje de error dentro del popup
+                errorMessageContainer.innerHTML += '<p>{{ message }}</p>';
+                openPopup('edit-profile-popup'); // Asegurarse de que el popup permanezca abierto
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+});
+
+
 function openPopup(popupId) {
     document.getElementById(popupId).style.display = 'flex';
 }
@@ -78,5 +110,5 @@ function closePopup(popupId) {
     document.getElementById(popupId).style.display = 'none';
 }
 </script>
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 {% endblock %}
