Ahora si funciona el limpiar filtro dentro del listado de pacientes

--- a/recepcionista/templates/recepcionista_pacientes.html
+++ b/recepcionista/templates/recepcionista_pacientes.html
@@ -238,6 +238,6 @@
     });
     
 </script>
-<script src="{% static 'js/admin_buscador_paciente.js' %}"></script>
+<script src="{% static 'js/buscar_paciente.js' %}"></script>
 {% endblock %}
 
