--- a/administrador/templates/admin_pacientes.html
+++ b/administrador/templates/admin_pacientes.html
@@ -15,6 +15,7 @@
     <form class="busqueda-form">
         <div class="busqueda-input">
             <input type="text" class="form-control" id="searchInput" placeholder="Búsqueda por Nombre o Rut" aria-label="Buscar Paciente">
+            <button type="button" id="clearButton" class="clear-button" style="display: none;">Limpiar Filtro</button>
         </div>
     </form>
 </div>
